--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-/* .App {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
+
+html,
+body,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url(/img/pattern.jpg);
+  font-family: "Slabo 27px", serif;
+  margin: 0px;
+  color: white !important;
+  font-family: "Montserrat", sans-serif;
+}
+
+header {
+  background-color: #242a40;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  z-index: 1;
+}
+
+nav li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+nav li a {
+  text-decoration: none;
+  color: white !important;
+  padding: 10px;
+}
+
+section {
+  margin-left: 250px;
+  margin-right: 0;
+  background-color: #242a40;
+  position: relative;
+  top: 50px;
+  padding: 20px;
+  margin-bottom: 100px;
+}
+
+table td {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+article {
+  border-bottom: 1px solid lightgrey;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  background-color: black;
   color: white;
+  height: 51px;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
 }
 
-.App-link {
-  color: #61dafb;
+.container-movie {
+  width: 90%;
+  height: 200px;
+  background-color: tomato;
+  margin: 10px 10px;
+  border-radius: 7px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.container-movie img {
+  height: 100%;
+  width: 100%;
+}
+
+.kotak-movie {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+  background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+}
+
+.konten-movie {
+  opacity: 1;
+  position: absolute;
+  justify-self: start;
+  align-self: flex-end;
+  z-index: 8;
+  padding: 10px;
+}
+
+.konten-movie h3 {
+  margin-bottom: 7px;
+  text-transform: capitalize;
+}
+
+.konten-movie p {
+  font-size: 16px;
+  padding-left: 5px;
+}
+
+.rating {
+  display: flex;
+  align-content: center;
+}
