--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 html,
 body,
+h1,
 h2,
 h3,
 p {
@@ -10,7 +11,8 @@ p {
 }
 
 body {
-  background-image: url(/img/pattern.jpg);
+  /* background-image: url(/img/pattern.jpg); */
+  background-color: #303a5e;
   font-family: "Slabo 27px", serif;
   margin: 0px;
   color: white !important;
@@ -18,16 +20,20 @@ body {
 }
 
 header {
-  background-color: #242a40;
+  background-color: #303a5e;
   height: 50px;
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: 15px;
   position: fixed;
   top: 0px;
   right: 0px;
   left: 0px;
-  z-index: 1;
+  z-index: 9;
+}
+
+header h1 {
+  padding: 5px;
 }
 
 nav li {
@@ -42,14 +48,28 @@ nav li a {
   padding: 10px;
 }
 
+#sidebar {
+  position: fixed;
+  top: 0;
+  z-index: 9;
+  width: 250px;
+  height: 100vh;
+  background-color: #242a40;
+}
+
+#sidebar h1 {
+  padding-top: 15px;
+}
+
 section {
   margin-left: 250px;
   margin-right: 0;
-  background-color: #242a40;
+  background-color: #303a5e;
   position: relative;
-  top: 50px;
+  top: 70px;
   padding: 20px;
   margin-bottom: 100px;
+  min-height: 100vh;
 }
 
 table td {
@@ -72,28 +92,30 @@ h5 {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   width: 100%;
   bottom: 0px;
   right: 0px;
   left: 0px;
-  background-color: black;
+  display: flex;
+  background-color: #242a40;
   color: white;
   height: 51px;
   justify-content: center;
   align-items: center;
-  z-index: 9;
+  z-index: 12;
 }
 
 .container-movie {
   width: 90%;
   height: 200px;
-  background-color: tomato;
+  background-color: #242a40;
   margin: 10px 10px;
   border-radius: 7px;
   overflow: hidden;
   position: relative;
   display: flex;
+  overflow: hidden;
 }
 
 .container-movie img {
@@ -133,4 +155,110 @@ footer {
 .rating {
   display: flex;
   align-content: center;
+}
+
+/* LOGIN DAN REGISTER */
+
+.login-page {
+  margin: 0;
+  background-image: linear-gradient(
+      to right top,
+      rgba(53, 60, 140, 0.5),
+      rgba(53, 60, 140, 0.3)
+    ),
+    url(./theme/img/BackgroundLogin.jpg);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 11;
+  padding-top: 100px;
+}
+
+.judul {
+  color: white;
+}
+
+.judul h1 {
+  margin-top: 50px;
+  text-align: left;
+}
+
+.judul p {
+  padding: 40px 0;
+  line-height: 32px;
+}
+
+.login-box {
+  background-color: white;
+  color: #242a40;
+  text-align: center;
+  padding: 24px;
+  margin: 0 30px;
+  /* height: 75vh; */
+}
+
+.login-box h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.login-box p.sub-h3 {
+  margin-bottom: 50px;
+}
+
+.login-box .h3-padding {
+  margin-bottom: 50px;
+}
+
+.login-box .form-fill {
+  margin: 10px 0;
+  font-size: 5px !important;
+}
+
+.login-box form {
+  width: 100%;
+}
+
+.button.btn-daftar {
+  margin-top: 50px;
+}
+
+.silahkan-masuk {
+  font-size: 12px;
+  padding: 20px;
+}
+
+.silahkan-masuk a {
+  text-decoration: none;
+  color: #353c8c;
+  font-weight: 600;
+}
+
+.silahkan-masuk a:hover {
+  color: #1f245a;
+}
+
+#search-box {
+  background-color: #242a40 !important;
+  width: 30vw !important;
+  border-radius: 4px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+}
+
+#search-box .MuiSvgIcon-root {
+  display: flex;
+  padding-left: 7px;
+}
+
+#search-box .MuiInputBase-input {
+  background-color: #242a40 !important;
+  padding: 10px !important;
+  border-radius: 4px;
+  width: 25vw !important;
+  color: white !important;
 }
