Menambahkan list game pada homepage

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,10 @@ form.tambah-movie label {
   float: left;
 }
 
+.genre {
+  text-transform: capitalize;
+}
+
 h1.judul-section {
   margin: 40px auto;
 }
